--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ DB_PASSWORD=password123
 DB_PORT=5432
 PORT=3001
 JWT_SECRET=s3cReT_!@#1234567890_doctori_app_token
+FRONTEND_ORIGIN=https://192.168.74.215:3000
+SERVER_HOST=192.168.74.215
+SERVER_PORT=3001
