--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
     "version": "1.0.0",
     "description": "A simple Express.js server",
     "main": "server.js",
-    
-
     "scripts": {
         "start": "node server.js",
         "dev": "nodemon server.js"
@@ -19,6 +17,9 @@
         "socket.io": "^4.8.1"
     },
     "devDependencies": {
+        "@eslint/js": "^9.24.0",
+        "eslint": "^9.24.0",
+        "globals": "^16.0.0",
         "nodemon": "^3.0.0"
     }
 }
