--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@ DB_PASSWORD=password123
 DB_PORT=5432
 PORT=3001
 JWT_SECRET=s3cReT_!@#1234567890_doctori_app_token
-FRONTEND_ORIGIN=https://192.168.243.215:3000
-SERVER_HOST=192.168.243.215
+FRONTEND_ORIGIN=https://192.168.98.215:3000
+SERVER_HOST=192.168.98.215
 SERVER_PORT=3001
+DATABASE_URL= postgresql://mehdi:DSpQ4PO3gXl9In53rfu9sZyTSL17dPHE@dpg-d08j6415pdvs73f1brfg-a.oregon-postgres.render.com/doctori_db
+
+
