--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "express": "^4.21.2",
         "jsonwebtoken": "^9.0.2",
         "pg": "^8.14.1",
+        "pg-connection-string": "^2.8.5",
         "socket.io": "^4.8.1"
     },
     "devDependencies": {
