--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 JWT_SECRET=s3cReT_!@#1234567890_doctori_app_token
-FRONTEND_ORIGIN=https://192.168.43.139:3000
+FRONTEND_ORIGIN=https://2cp-project-silk.vercel.app
 SERVER_HOST=0.0.0.0
 SERVER_PORT=3001
 DATABASE_URL= postgresql://mehdi:DSpQ4PO3gXl9In53rfu9sZyTSL17dPHE@dpg-d08j6415pdvs73f1brfg-a.oregon-postgres.render.com/doctori_db
